fix: open CORS for all origins temporarily